# orderly-dashboard

./: .gitignore  .gitlab-ci.yml  BUILD_AND_RUN.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
orderly-dashboard-FE/: .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  README.md  app.js  env.d.ts  package-lock.json  package.json  remix.config.js  server.js  tsconfig.json  vercel.json  vite.config.ts
orderly-dashboard-FE/.vercel/: remix-build-result.json
orderly-dashboard-FE/app/: App.tsx  entry.client.tsx  entry.server.tsx  global.css  root.tsx  util.ts
orderly-dashboard-FE/app/components/: BrokerSelection.tsx  BrokerSelectionModal.tsx  DashboardLayout.tsx  EventsTable.tsx  Leaderboard.tsx  NavBar.tsx  PnLStats.tsx  Positions.tsx  SearchInput.tsx  SiteFooter.tsx  SiteHeader.tsx  Spinner.tsx  TaxExportModal.tsx  index.ts
orderly-dashboard-FE/app/hooks/: index.ts  useBrokers.ts  useBulkEvents.ts  useEvents.ts  useLeaderboard.ts  useMediaQuery.ts  useOrderlyMetrics.ts  usePositions.ts  useRefreshTimer.ts  useSearchAddress.ts  useStarred.ts  useSymbols.ts  useTokens.ts
orderly-dashboard-FE/app/routes/: _index.tsx  address_.$address.tsx  analytics.tsx  dashboard.tsx  explorer.tsx  leaderboard.tsx  search.tsx  widget.$widgetId.tsx
orderly-dashboard-FE/app/shared/: orderly.ts
orderly-dashboard-FE/app/styles/: client.context.tsx  index.ts  server.context.tsx
orderly-dashboard-FE/app/types/: api.ts  dashboard.ts  dune.ts  leaderboard.ts
orderly-dashboard-FE/app/utils/: data-api.ts  dune.ts
orderly-dashboard-FE/orderly-header-footer/: README.md
orderly-dashboard-FE/orderly-header-footer/components/: SiteFooter.tsx  SiteHeader.tsx
orderly-dashboard-FE/orderly-header-footer/imports/: CamelotLogo.tsx  IcSocialYoutubeS24.tsx  UniswapLogo.tsx
orderly-dashboard-FE/orderly-header-footer/styles/: fonts.css  theme.css
orderly-dashboard-FE/public/: dashboard.html  echart-example.html  example.html
orderly-dashboard-FE/public/fonts/: README.md
orderly-dashboard-FE/src/: main.rs
orderly-dashboard-analyzer/: .env  .gitignore  Cargo.toml  README.md  config-dev.json  config-prod.json
orderly-dashboard-analyzer/migrations/2023-12-06-110528_hourly_orderly_perp/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-110543_orderly_perp_summary/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-110605_hourly_orderly_token/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-110620_orderly_token_summary/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-110637_hourly_user_perp/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-110647_user_perp_summary/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-110702_hourly_user_token/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-110712_user_token_summary/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-06-114009_block_summary/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2023-12-13-033946_add_columns/: up.sql
orderly-dashboard-analyzer/migrations/2023-12-14-114956_dml/: up.sql
orderly-dashboard-analyzer/migrations/2023-12-21-031532_symbol/: down.sql  up.sql
orderly-dashboard-analyzer/migrations/2024-03-14-234455_gas_fee/: up.sql
orderly-dashboard-analyzer/migrations/2024-04-02-121303_broker_info/: up.sql
orderly-dashboard-analyzer/migrations/2024-04-02-122416_user_info/: up.sql
orderly-dashboard-analyzer/migrations/2024-05-23-023204_add_brokers/: up.sql
orderly-dashboard-analyzer/migrations/2024-06-03-075222_add_sum_unitary_fundings/: up.sql
orderly-dashboard-analyzer/migrations/2025-05-14-085135_alter_user_perp_summary/: up.sql
orderly-dashboard-analyzer/migrations/2025-05-14-144849_create_table_market_info/: up.sql
orderly-dashboard-analyzer/migrations/2025-08-26-064550_create_table_collateral_info/: up.sql
orderly-dashboard-analyzer/migrations/2025-09-27-150315_create_table_user_volume_statistics/: up.sql
orderly-dashboard-analyzer/migrations/2025-10-09-094627_alter_table_user_volume_statistics/: up.sql
orderly-dashboard-analyzer/migrations/2025-10-09-120955_alter_table_user_volume_statistics/: up.sql
orderly-dashboard-analyzer/migrations/2025-10-11-023027_alter_table_hourly_user_perp/: up.sql
orderly-dashboard-analyzer/migrations/2026-01-26-111810_alter_table_user_info/: up.sql
orderly-dashboard-analyzer/migrations/2026-02-02-070905_create_table_ios_user_perp_summary/: up.sql
orderly-dashboard-analyzer/migrations/2026-03-31-090128_alter_table_user_perp_summary/: up.sql
orderly-dashboard-analyzer/migrations/2026-04-14-100000_add_broker_hash_to_user_perp_summary/: down.sql  up.sql
orderly-dashboard-analyzer/src/: config.rs  lib.rs  main.rs  schema.rs  sync_account.rs  sync_broker.rs  sync_market_data.rs
orderly-dashboard-analyzer/src/db/: mod.rs  (+17 more)
orderly-dashboard-indexer/: .envexample  .gitignore  Cargo.toml  README.md  build.rs  config.example-dev.json  config.example-prod.json  config.example-qa.json  config.example-staging.json  rustfmt.toml
orderly-dashboard-indexer/abis/: market_manager.json  operator_manager.json  user_ledger.json  vault_manager.json
orderly-dashboard-indexer/doc/: Executed_trades_partitioning.md  How-to-indexing-data.md  TestData.md
orderly-dashboard-indexer/scripts/: sync_dev_env.sh  sync_qa_env_adl.sh  sync_test_blocks.sh
orderly-dashboard-indexer/src/: analyzer_db_schema.rs  cefi_client.rs  client.rs  config.rs  constants.rs  consume_data_task.rs  eth_rpc.rs  init.rs  lib.rs  main.rs  schema.rs  server.rs  settings.rs  transform.rs  utils.rs
orderly-dashboard-query-service/: Cargo.toml  README.md  config.example-prod.json  config.example-staging.json  dump.rdb
orderly-dashboard-query-service/doc/: api.md
orderly-dashboard-query-service/scripts/: init_data.sql
orderly-dashboard-query-service/src/: config.rs  error_code.rs  lib.rs  lookup.rs  main.rs  network_info.rs  raw_query.rs  status.rs  swagger_docs.rs  utils.rs
(+228 files in other folders)
