[package]
name = "orderly-dashboard-analyzer"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.29"

actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
orderly-dashboard-indexer = { path = "../orderly-dashboard-indexer" }

diesel = { version = "1.4.7", features = ["postgres", "numeric", "serde_json", "chrono", "uuidv07"] }
dotenv = "0.15.0"
serde_json = "1.0.108"
serde = "1.0.192"
actix-diesel = { git = "https://github.com/frol/actix-diesel", rev = "3a001986c89dfabfc3c448d8bae28525101b4992" }

bigdecimal = "0.1"

lazy_static = "1.4.0"
once_cell = "1.18.0"

hyper = {version = "0.14", features = ["full"]}
chrono = "0.4"
ring = "0.16"
hex = "0.4.3"
hex-literal = "0.4.1"


tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3.0", features = ["color", "derive", "env"] }

tiny-keccak = "2.0"

num-bigint = "0.4.4"
num-traits = "0.2"
openssl-probe = "0.1.5"