[package]
name = "orderly-dashboard-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.75"
ethers = { version = "2.0.10", features = ["abigen", "rustls", "optimism"]}
tokio = { version = "1.33.0", features = ["full"]}
futures = "0.3.29"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3.0", features = ["color", "derive", "env"] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
parking_lot = "0.12"
diesel = { version = "1.4.7", features = ["postgres", "numeric", "serde_json", "chrono", "uuidv07"] }
dotenv = "0.15.0"
once_cell = "1.18.0"
serde_json = "1.0.108"
serde = "1.0.192"
actix-diesel = { git = "https://github.com/frol/actix-diesel", rev = "3a001986c89dfabfc3c448d8bae28525101b4992" }
actix = "=0.13.0"
actix-rt = "2.2.0"
async-trait = "0.1"
num_cpus = "1.15.0"
url = "2.2"
base64-url = "1.4"
base64 = "0.13"
bigdecimal = "0.1"
hyper = {version = "0.14", features = ["full"]}
chrono = "0.4"
ring = "0.16"
reqwest = { version = "0.11", features = ["json"]}
hex = "0.4.3"
hex-literal = "0.4.1"
openssl-probe = "0.1.5"
typescript-type-def = "0.5"

[build-dependencies]
ethers = { version = "2.0.10", features = ["abigen"]}

