[package]
name = "orderly-dashboard-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.75"
ethers = { version = "2.0.10", features = ["abigen", "rustls", "optimism"]}
tokio = { version = "1.33.0", features = ["full"]}
futures = "0.3.29"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3.0", features = ["color", "derive", "env"] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
parking_lot = "0.12"
diesel = { version = "2.2.10", features = ["numeric", "serde_json", "postgres", "chrono"] }
dotenv = "0.15.0"
once_cell = "1.18.0"
serde_json = "1.0.108"
serde = "1.0.192"
diesel-async = { version = "0.5.2", features = ["postgres", "async-connection-wrapper", "deadpool"] }
actix = "=0.13.0"
actix-rt = "2.2.0"
async-trait = "0.1"
num_cpus = "1.15.0"
url = "2.2"
base64-url = "1.4"
base64 = "0.13"
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
hyper = {version = "0.14", features = ["full"]}
chrono = "0.4"
ring = "0.16"
reqwest = { version = "0.11", features = ["json"]}
hex = "0.4.3"
hex-literal = "0.4.1"
openssl-probe = "0.1.5"
typescript-type-def = "0.5"
ethers-contract = { version = "2.0.10", features= ["abigen"]}
bincode = "1.3.3"
bs58 = "0.5.1"
base58 = "0.2.0"
bytemuck_derive = "1.7.0"
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"]}
bytemuck = { version = "1.16.1" }
generic-array = { version = "0.14.7", features = ["serde", "more_lengths"]}
thiserror = "1.0.61"
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
semver = "1.0.23"
crossbeam-channel = "0.5.13"
futures-util = "0.3.30"
borsh = { version = "1.5.1", features = ["derive"]}
anchor-syn = { version = "0.30.1", features = ["hash"]}
utoipa = { version = "5.3.1", features = ["actix_extras"] }
cached = "0.56.0"
tiny-keccak = "2.0"

[features]
frozen-abi = []
borsh = []

[build-dependencies]
ethers = { version = "2.0.10", features = ["abigen"]}

