[package]
name = "orderly-dashboard-query-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.5"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"]}
anyhow = "1.0.75"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3.0", features = ["color", "derive", "env"] }
