[package]
name = "orderly-dashboard-query-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.5"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"]}
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3.0", features = ["color", "derive", "env"] }
orderly-dashboard-analyzer = {path = "../orderly-dashboard-analyzer"}
diesel = { version = "1.4.7", features = ["postgres", "numeric", "serde_json", "chrono", "uuidv07"] }
dotenv = "0.15.0"
actix-diesel = { git = "https://github.com/frol/actix-diesel", rev = "3a001986c89dfabfc3c448d8bae28525101b4992" }
bigdecimal = "0.1"
lazy_static = "1.4.0"
once_cell = "1.18.0"
chrono = "0.4"

serde_derive = "1.0"