[package]
name = "orderly-dashboard-query-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.5"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"]}
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.3.0", features = ["color", "derive", "env"] }
orderly-dashboard-analyzer = {path = "../orderly-dashboard-analyzer"}
orderly-dashboard-indexer = {path = "../orderly-dashboard-indexer"}
diesel = { version = "2.2.10", features = ["numeric", "serde_json", "postgres", "chrono", "postgres_backend", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
dotenv = "0.15.0"
diesel-async = { version = "0.5.2", features = ["postgres", "async-connection-wrapper"] }
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
chrono = "0.4"

serde_derive = "1.0"
openssl-probe = "0.1.5"

postgres = {version = "0.19.7", features = ["with-serde_json-1", "array-impls"]}
parking_lot = "0.12"

tokio = { version = "1.33.0", features = ["full"]}
futures = "0.3.29"
num_cpus = "1.15.0"
reqwest = "0.11.22"
typescript-type-def = "0.5"
sysinfo = "0.33.1"
dashmap = "6.1.0"
fxhash = "0.2.1"
num-bigint = "0.4.4"
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1